# sbatch_wrappers

./: .travis.yml  LICENSE  Readme.md  pyproject.toml  sbatch_wrapper.py
sbatch_wrapper/: __init__.py
test/: test_wrapper.py
