[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sbatch_wrapper"
author = "University Of California Merced Research IT"
author-email = "mbussonnier@ucmerced.edu"
home-page = "https://github.com/ucmerced/sbatch_wrappers"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
sbatch = "sbatch_wrapper:entrypoint"

